Fix color contrast issue on venue page

--- a/src/common/components/mapBox/mapBox.module.scss
+++ b/src/common/components/mapBox/mapBox.module.scss
@@ -49,7 +49,7 @@
   margin-top: $spacing-s;
 
   a {
-    color: $color-copper-dark;
+    color: $color-tram-dark;
   }
 
   & > *:not(:last-child) {
