--- a/src/pages/venues/[id]/venue.module.scss
+++ b/src/pages/venues/[id]/venue.module.scss
@@ -207,7 +207,7 @@
   .accessibilityTitle {
     display: flex;
     align-items: center;
-    color: $color-copper-dark;
+    color: $color-tram-dark;
     font-weight: 700;
     font-size: 1.2rem;
 
